# gastropartner

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CRO_IMPLEMENTATION_SUMMARY.md  DEBUG_TODO_IMPLEMENTATIONS.md  DEPLOYMENT.md  FEEDBACK_SYSTEM_FIX.md  JWT_MIGRATION_ANALYSIS.md  MONITORING_IMPLEMENTATION.md  README.md  RECIPE_MANAGEMENT_ARCHITECTURE.md  RECIPE_MENU_WIZARD_DOCUMENTATION.md  RECIPE_MENU_WIZARD_IMPLEMENTATION_SUMMARY.md  SECURE_SETUP.md  SECURITY_AUDIT_REPORT.md  SECURITY_QUICK_REFERENCE.md  fix_development_db.sql  fix_premium_subscription.sql  fix_users_table.sql  package-lock.json  performance-monitoring.js  render-staging.yaml  render.yaml  test_api.py  test_premium_fix.py  verify_fix.py  vision.md
.claude/: archon.md  database.md  development.md  main.md  security.md  superdesign.md
.github/scripts/: synthetic-tests.py
.github/workflows/: README.md  ci.yml  deploy-production.yml  deploy-staging.yml  e2e-tests.yml  synthetic-monitoring.yml  visual-regression.yml
.serena/: project.yml
.serena/memories/: code_style_conventions.md  docker_troubleshooting_resolution.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
.superdesign/design_iterations/: gastropartner_complete.html  gastropartner_professional.html  gastropartner_theme.css  modules_dual_buttons.html  modules_pricing_mockup.html  modules_pricing_theme.css  professional_theme_v2.css
gastropartner-backend/: .env.development  .env.development.template  MULTITENANT_ARCHITECTURE.md  MULTITENANT_SECURITY_REPORT.md  Makefile  README.md  README_TESTING.md  SECURITY_IMPLEMENTATION_GUIDE.md  build.sh  check_auth.py  create_analytics_table.sh  pyproject.toml  requirements.txt  run_tests.py  security_validation_tool.py  test_ingredient_persistence.py
gastropartner-backend/migrations/: 001_create_user_analytics_events_table.sql  002_create_user_feedback_table.sql  003_create_feature_flags_table.sql  004_create_sales_tables.sql  005_create_analytics_events_table.sql
gastropartner-backend/performance/: README.md  basic-load-test.js  config.js  database-performance.js  k6-install.js  stress-test.js  utils.js
gastropartner-backend/quality-control/: change_detector.db
gastropartner-backend/src/gastropartner/: __init__.py  config.py  conftest.py  main.py
gastropartner-backend/src/gastropartner/api/: __init__.py  analytics.py  auth.py  cost_control.py  feature_flags.py  freemium.py  ingredients.py  menu_items.py  modules.py  monitoring.py  multitenant.py  organizations.py  recipes.py  reports.py  sales.py  superadmin.py  testing.py  user_testing.py
gastropartner-backend/src/gastropartner/api/tests/: test_cost_control_api.py
gastropartner-backend/src/gastropartner/core/: __init__.py  alerting.py  analytics.py  auth.py  cost_calculation_engine.py  cost_control.py  database.py  freemium.py  models.py  models.py.backup  modules.py  monitoring.py  multitenant.py  repository.py  vat_utils.py
gastropartner-backend/src/gastropartner/core/tests/: test_cost_control.py
gastropartner-backend/src/gastropartner/middleware/: __init__.py  analytics.py  superadmin.py
gastropartner-backend/src/gastropartner/tests/: test_main.py  test_monitoring.py  test_multitenant.py  test_trailing_slash.py
gastropartner-backend/src/gastropartner/utils/: logger.py  unit_conversion.py
gastropartner-frontend/: package-lock.json  package.json  playwright-testdata.js  playwright.config.ts  setup-dev.js  testdata-setup.js  tsconfig.json  verify-testdata.js
gastropartner-frontend/performance/: bundle-analyzer.js
gastropartner-frontend/src/: App.css  App.test.tsx  App.tsx  index.css  setupProxy.js
gastropartner-test-suite/: Dockerfile  MANUAL_TEST_RUNNER.md  README.md  archon_real_integration.py  demo_archon_integration.py  demo_human_logger.py  docker-compose.yml  nginx.conf  requirements.txt  run_manual_tests.py  run_tests.py  start_dashboard.sh  test_api_server.py  test_archon_integration.py  validate_integration.py
gastropartner-test-suite/dashboard/: index.html
gastropartner-test-suite/monitoring/: Dockerfile  monitor.py
gastropartner-test-suite/scripts/: ci_integration.py  init-db.sql  run_continuous_monitoring.py
gastropartner-test-suite/static/: archon-integration.js
quality-control/: README.md  __init__.py  api_server.py  archon_mcp_integration.py  archon_task_creator.py  change_detector.db  claude_integration.py  create_archon_tasks.py  feedback_processor.py  guaranteed_monitor.py  guaranteed_pre_commit.py  main.py  monitoring.py  pyproject.toml  validation_history.db  web_validation_integration.py
quality-control/agents/: __init__.py  authentication_security_agent.py  backend_agent.py  design_agent.py  dynamic_test_agent.py  e2e_validation_agent.py  functional_agent.py  functional_validation_agent.py  localization_agent.py  ml_adaptation_agent.py  multi_tenant_ui_agent.py  quality_control_agent.py  security_agent.py
quality-control/config/: agent_config.yaml  validation_rules.yaml
quality-control/quality-control/: change_detector.db
quality-control/watchers/: __init__.py  change_detector.py  file_monitor.py
scripts/: performance-check.sh
(+224 files in other folders)
