[project]
name = "gastropartner-quality-control"
version = "0.1.0"
description = "Automated quality control system for GastroPartner"
dependencies = [
    "rich>=13.0.0",
    "watchdog>=3.0.0",
    "pydantic-ai>=0.0.7",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "asyncio-mqtt>=0.13.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "psutil>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "watchers"]

[tool.uv]
dev-dependencies = []
